Correcciones de entrega Fianl, responsivo y clases propias

--- a/pages/worklife.html
+++ b/pages/worklife.html
@@ -2,36 +2,39 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Técnicas, herramientas y experiencias reales de arboristas de todas partes del mundo.">
-    <meta name="keywords" content="arborismo, tree climber, arboricultura.">
-    <!--Bootstrap-->
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description"
+        content="Técnicas, herramientas y experiencias reales de arboristas de todas partes del mundo." />
+    <meta name="keywords" content="arborismo, tree climber, arboricultura." />
+    <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
-    <!--ANIMATE-->
+        integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous" />
+    <!-- ANIMATE -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
-    <!--AOS-->
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <!--CSS-->
-    <link rel="stylesheet" href="../styles/style.css">
+    <!-- AOS -->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
+    <!-- CSS -->
+    <link rel="stylesheet" href="../styles/style.css" />
     <title>Tree tale | Técnicas, herramientas y experiencias.</title>
 </head>
 
 <body>
     <header>
         <nav class="navbar navbar-expand-lg bg-estilo-jesu">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="#">
-                    <img class="logo-navbar" src="../assets/Logo-Tree-Tale.png" alt="Logo-TreeTale">
+            <div class="container">
+                <a class="navbar-brand" href="../index.html">
+                    <img class="logo-navbar" src="../assets/Logo-Tree-Tale.png" alt="Logo-TreeTale" />
                 </a>
+
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
+
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <ul class="navbar-nav">
                         <li class="nav-item">
                             <a class="nav-link" href="../index.html">Home</a>
                         </li>
@@ -48,96 +51,117 @@
                             <a class="nav-link" href="./environment.html">Environment</a>
                         </li>
                     </ul>
-                    <form class="d-flex boton-search" role="search">
-                        <input class="form-control me-2 boton-search" type="search" placeholder="Search"
-                            aria-label="Search" />
-                        <button class="btn btn-outline-success boton-search" type="submit">Search</button>
+
+                    <!-- Buscador -->
+                    <form class="buscador-form" role="search">
+                        <input class="buscador" type="search" placeholder="Search" aria-label="Search" />
+                        <button class="boton-secundario" type="submit">Search</button>
                     </form>
                 </div>
             </div>
         </nav>
     </header>
+
     <main>
+        <!-- Título de páginas -->
         <div class="container titulo-page">
-            <Section>
+            <section>
                 <h2>La vida cotidiana del arborista</h2>
-                <p>Un recorrido por el día a día de quienes trabajan entre los árboles: desde técnicas y herramientas que aseguran seguridad y eficiencia, hasta experiencias reales que forman oficio. Aquí exploramos todo lo que hace posible un arborismo profesional, responsable y en armonía con el entorno.</p>
-            </Section>
+                <p>
+                    Un recorrido por el día a día de quienes trabajan entre los árboles:
+                    desde técnicas y herramientas que aseguran seguridad y eficiencia, hasta
+                    experiencias reales que forman oficio. Aquí exploramos todo lo que hace
+                    posible un arborismo profesional, responsable y en armonía con el entorno.
+                </p>
+            </section>
         </div>
-<!--Cards pequeñas solo título-->
-        <div class="container py-5">
-               <header class="mb-4 text-center">
-                    <h2 class="seccion-titulo">Explora las conexiones del mundo arbóreo</h2>
-                    <p class="seccion-subtitulo">Descubre las áreas clave que revelan cómo los árboles comunican, resisten, inspiran y enseñan a través de su sabiduría ancestral y natural.</p>
-                </header>
+
+        <!-- Cards pequeñas (solo título) -->
+        <div class="container seccion-contenedor">
+            <header class="seccion-header">
+                <h2 class="seccion-titulo">Explora las conexiones del mundo arbóreo</h2>
+                <p class="seccion-subtitulo">
+                    Descubre las áreas clave que revelan cómo los árboles comunican, resisten,
+                    inspiran y enseñan a través de su sabiduría ancestral y natural.
+                </p>
+            </header>
+
             <div class="row row-cols-1 row-cols-md-3 g-4">
                 <div class="col">
                     <div class="card card-chica h-100">
-                        <img src="../assets/Card-1.png" class="card-img-top" alt="arborista-escalando">
+                        <img src="../assets/Card-1.png" class="card-img-top" alt="arborista-escalando" />
                         <div class="card-body">
                             <h3 class="card-title">Escalada segura en árboles urbanos</h3>
                         </div>
                     </div>
                 </div>
+
                 <div class="col">
                     <div class="card card-chica h-100">
-                        <img src="../assets/Card-2.png" class="card-img-top" alt="arborista-podando">
+                        <img src="../assets/Card-2.png" class="card-img-top" alt="arborista-podando" />
                         <div class="card-body">
                             <h3 class="card-title">Técnicas de poda profesional</h3>
                         </div>
                     </div>
                 </div>
+
                 <div class="col">
                     <div class="card card-chica h-100">
-                        <img src="../assets/card-3.png" class="card-img-top" alt="equipo-arborismo">
+                        <img src="../assets/card-3.png" class="card-img-top" alt="equipo-arborismo" />
                         <div class="card-body">
                             <h3 class="card-title">Equipamiento esencial para el día a día</h3>
                         </div>
                     </div>
                 </div>
+
                 <div class="col">
                     <div class="card card-chica h-100">
-                        <img src="../assets/Card-4.png" class="card-img-top" alt="arboristas-analizando-árbol">
+                        <img src="../assets/Card-4.png" class="card-img-top" alt="arboristas-analizando-árbol" />
                         <div class="card-body">
                             <h3 class="card-title">Evaluación de riesgos en terreno</h3>
                         </div>
                     </div>
                 </div>
+
                 <div class="col">
                     <div class="card card-chica h-100">
-                        <img src="../assets/Card-5.png" class="card-img-top" alt="arborista-revisando-doc.">
+                        <img src="../assets/Card-5.png" class="card-img-top" alt="arborista-revisando-doc." />
                         <div class="card-body">
                             <h3 class="card-title">Normativas y estándares ISA en acción</h3>
                         </div>
                     </div>
                 </div>
+
                 <div class="col">
                     <div class="card card-chica h-100">
-                        <img src="../assets/Card-6.png" class="card-img-top" alt="arborista-comunicación">
+                        <img src="../assets/Card-6.png" class="card-img-top" alt="arborista-comunicación" />
                         <div class="card-body">
                             <h3 class="card-title">Trabajo en equipo y comunicación en altura</h3>
                         </div>
                     </div>
                 </div>
+
                 <div class="col">
                     <div class="card card-chica h-100">
-                        <img src="../assets/Card-7.png" class="card-img-top" alt="arborista-enseñanza">
+                        <img src="../assets/Card-7.png" class="card-img-top" alt="arborista-enseñanza" />
                         <div class="card-body">
                             <h3 class="card-title">Aprendizajes de campo: Errores que enseñan</h3>
                         </div>
                     </div>
                 </div>
+
                 <div class="col">
                     <div class="card card-chica h-100">
-                        <img src="../assets/Card-8.png" class="card-img-top" alt="arborista-tiempo">
+                        <img src="../assets/Card-8.png" class="card-img-top" alt="arborista-tiempo" />
                         <div class="card-body">
                             <h3 class="card-title">Gestión del tiempo y rutinas de trabajo</h3>
                         </div>
                     </div>
                 </div>
+
                 <div class="col">
                     <div class="card card-chica h-100">
-                        <img src="../assets/Card-9.png" class="card-img-top" alt="arborista-mantención">
+                        <img src="../assets/Card-9.png" class="card-img-top" alt="arborista-mantención" />
                         <div class="card-body">
                             <h3 class="card-title">Mantenimiento y cuidado de herramientas</h3>
                         </div>
@@ -147,65 +171,72 @@
         </div>
     </main>
 
-    <footer class="py-5 estilo-footer-jesu">
+    <!-- Footer -->
+    <footer class="estilo-footer-jesu">
         <div class="container">
             <div class="row">
-                <!--Logo-->
-                <div class="col-6 col-md-2 mb-3">
-                    <img class="logo-navbar" src="../assets/Logo-Tree-Tale.png" alt="Logo-TreeTale">
+                <!-- Logo -->
+                <div class="col-6 col-md-2">
+                    <img class="logo-navbar" src="../assets/Logo-Tree-Tale.png" alt="Logo-TreeTale" />
                 </div>
-                <!--Links-->
-                <div class="col-6 col-md-2 mb-3">
+
+                <!-- Links -->
+                <div class="col-6 col-md-2">
                     <h5>Secciones</h5>
                     <ul class="nav flex-column">
-                        <li class="nav-item mb-2">
-                            <a href="../index.html" class="nav-link p-0 text-body-secondary">Home</a>
+                        <li class="nav-item">
+                            <a href="../index.html" class="nav-link">Home</a>
                         </li>
-                        <li class="nav-item mb-2">
-                            <a href="#" class="nav-link p-0 text-body-secondary">Worklife</a>
+                        <li class="nav-item">
+                            <a href="#" class="nav-link">Worklife</a>
                         </li>
-                        <li class="nav-item mb-2">
-                            <a href="./treeWisdom.html" class="nav-link p-0 text-body-secondary">Tree Wisdom</a>
+                        <li class="nav-item">
+                            <a href="./treeWisdom.html" class="nav-link">Tree Wisdom</a>
                         </li>
-                        <li class="nav-item mb-2">
-                            <a href="./environment.html" class="nav-link p-0 text-body-secondary">Environment</a>
+                        <li class="nav-item">
+                            <a href="./environment.html" class="nav-link">Environment</a>
                         </li>
-                        <li class="nav-item mb-2">
-                            <a href="./managment.html" class="nav-link p-0 text-body-secondary">Managment</a>
+                        <li class="nav-item">
+                            <a href="./managment.html" class="nav-link">Managment</a>
                         </li>
                     </ul>
                 </div>
-                <!--Newsletter-->
-                <div class="col-md-5 offset-md-1 mb-3">
+
+                <!-- Newsletter -->
+                <div class="col-md-5 offset-md-1 newsletter">
                     <form>
                         <h5>Suscríbete a nuestra Newsletter</h5>
                         <p>Y recibe contenido nuevo cada semana.</p>
-                        <div class="d-flex flex-column flex-sm-row w-100 gap-2"> <label for="newsletter1"
-                                class="visually-hidden">tu
-                                correo</label> <input id="newsletter1" type="email" class="form-control"
-                                placeholder="Email address">
-                            <button class="btn btn-estilo-jesu" type="button">Suscribirme</button>
+
+                        <div class="newsletter-row">
+                            <label for="newsletter1" class="visually-hidden">tu correo</label>
+                            <input id="newsletter1" type="email" class="form-control" <!-- puedes reemplazar por clase
+                                propia si quieres quitar form-control -->
+                            placeholder="Email address"
+                            />
+                            <button class="boton-secundario" type="button">Suscribirme</button>
                         </div>
                     </form>
                 </div>
             </div>
-            <!--Parte de abajo-->
-            <div class="container d-flex flex-column flex-sm-row justify-content-between py-4 my-4 border-top">
+
+            <!-- Parte de abajo -->
+            <div class="footer-bottom">
                 <p>© 2025 TreeTale. Todos los derechos reservados.</p>
-                <ul class="list-unstyled d-flex">
-                    <li class="ms-3">
-                        <a class="link-body-emphasis" href="../assets/instagram-logo.png" aria-label="Instagram">
-                            <img src="../assets/instagram-logo.png" alt="Instagram-logo">
+                <ul class="redes">
+                    <li>
+                        <a href="../assets/instagram-logo.png" aria-label="Instagram">
+                            <img src="../assets/instagram-logo.png" alt="Instagram-logo" />
                         </a>
                     </li>
-                    <li class="ms-3">
-                        <a class="link-body-emphasis" href="#" aria-label="Youtube">
-                            <img src="../assets/youtube-logo.png" alt="youtube-logo">
+                    <li>
+                        <a href="#" aria-label="Youtube">
+                            <img src="../assets/youtube-logo.png" alt="youtube-logo" />
                         </a>
                     </li>
-                    <li class="ms-3">
-                        <a class="link-body-emphasis" href="#" aria-label="Linkedin">
-                            <img src="../assets/linkedin-logo.png" alt="linkedin-logo">
+                    <li>
+                        <a href="#" aria-label="Linkedin">
+                            <img src="../assets/linkedin-logo.png" alt="linkedin-logo" />
                         </a>
                     </li>
                 </ul>
@@ -213,15 +244,13 @@
         </div>
     </footer>
 
-    <!--Bootstrap JS-->
+    <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
         crossorigin="anonymous"></script>
-    <!--AOS-->
+    <!-- AOS -->
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <script>
-        AOS.init();
-    </script>
+    <script>AOS.init();</script>
 </body>
 
 </html>
