--- a/index.html
+++ b/index.html
@@ -1,100 +1,98 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="description" content="Comunidad de arboristas global, pagina con toda la informacion centralizada de las diferentes areas del arborismo.">
   <meta name="keywords" content="Arborismo, tree climber, arboricultura, manejo arboles, poda arboles.">
-  <!--Bootstrap-->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
-  <!--ANIMATE-->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
-  <!--AOS-->
-  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-  <!--CSS-->
-  <link rel="stylesheet" href="./styles/style.css">
 
+  <!-- Bootstrap -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
+
+  <!-- Animate.css -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+
+  <!-- AOS -->
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+
+  <!-- CSS -->
+  <link rel="stylesheet" href="./styles/style.css">
 
   <title>Tree tale</title>
 </head>
-
 <body>
+  <!-- Navbar -->
   <header>
     <nav class="navbar navbar-expand-lg bg-estilo-jesu">
-      <div class="container-fluid">
+      <div class="container">
         <a class="navbar-brand" href="#">
           <img class="logo-navbar" src="./assets/Logo-Tree-Tale.png" alt="Logo-TreeTale">
         </a>
+
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Abrir navegación">
           <span class="navbar-toggler-icon"></span>
         </button>
+
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <!-- Menú principal -->
+          <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
+              <a class="nav-link" aria-current="page" href="#">Home</a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="./pages/worklife.html">Worklife</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="./pages/treeWisdom.html">Tree Wisdom</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="./pages/managment.html">Managment</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="./pages/environment.html">Environment</a>
-            </li>
+            <li class="nav-item"><a class="nav-link" href="./pages/worklife.html">Worklife</a></li>
+            <li class="nav-item"><a class="nav-link" href="./pages/treeWisdom.html">Tree Wisdom</a></li>
+            <li class="nav-item"><a class="nav-link" href="./pages/managment.html">Managment</a></li>
+            <li class="nav-item"><a class="nav-link" href="./pages/environment.html">Environment</a></li>
           </ul>
-          <form class="d-flex boton-search" role="search">
-            <input class="form-control me-2 buscador" type="search" placeholder="Search" aria-label="Search" />
-            <button class="btn btn-outline-success boton-secundario" type="submit">Search</button>
+
+          <!-- Buscador -->
+          <form class="nav-search" role="search">
+            <input class="buscador" type="search" placeholder="Search" aria-label="Search" />
+            <button class="boton-secundario" type="submit">Search</button>
           </form>
         </div>
       </div>
     </nav>
   </header>
-  <main>
-    <div class="card text-bg-dark mb-5 banner-estilo-jesu">
-      <img src="./assets/banner-gradiente-index.png" class="imagen-banner"
-        alt="arborista trepando un arbol, de fondo un parque público, luz calida">
-      <div class="card-img-overlay texto-card-banner">
-        <h1 class="card-title">Historias, saberes y herramientas para quienes cuidan los árboles del mundo</h1>
-      </div>
-    </div>
-    <!--Bloque texto + botón-->
-    <section class="info-card-container-sf">
-      <div class="info-card">
-        <h3 class="card-text text-center">Explora, aprende y conéctate con una comunidad global.</h3>
-        <p class="text-center">Recibe contenido seleccionado, herramientas útiles y lo mejor del mundo arborista
-          directamente en tu correo.</p>
-        <button class="btn btn-primary boton-primario" type="button">Unirme a la comunidad</button>
 
+  <main>
+    <!-- Banner -->
+    <section class="card banner-estilo-jesu">
+      <img src="./assets/banner-gradiente-index.png" class="imagen-banner" alt="arborista trepando un arbol, de fondo un parque público, luz calida">
+      <div class=" card-img-overlay texto-card-banner">
+        <h1 class="card-title titulo-h1">Historias, saberes y herramientas para quienes cuidan los árboles del mundo</h1>
       </div>
     </section>
-    <!--Card Mediana (Informativa)-->
-    <div class="card mx-auto card-mediana">
+
+    <!-- Bloque texto + botón -->
+    <section class="info-card-container-sf">
+      <div class="info-card">
+        <h3>Explora, aprende y conéctate con una comunidad global.</h3>
+        <p>Recibe contenido seleccionado, herramientas útiles y lo mejor del mundo arborista directamente en tu correo.</p>
+        <button class="boton-primario" type="button">Unirme a la comunidad</button>
+      </div>
+    </section>
+
+    <!-- Card Mediana (Informativa) -->
+    <section class="card-mediana container">
       <div class="row g-0">
         <div class="col-md-6">
-          <img src="./assets/arboristas(3)-riendo.png" class="img-fluid rounded-start"
-            alt="3 arboristas riendo al lado de un arbol">
+          <img src="./assets/arboristas(3)-riendo.png" alt="3 arboristas riendo al lado de un arbol">
         </div>
         <div class="col-md-6">
           <div class="card-body">
             <h3 class="card-title">Del árbol al aprendizaje: miradas desde el oficio</h3>
-            <p class="card-text">Aprende cómo arboristas del mundo enfrentan desafíos reales: desde poda en altura hasta
-              liderazgo de equipos.</p>
+            <p class="card-text">Aprende cómo arboristas del mundo enfrentan desafíos reales: desde poda en altura hasta liderazgo de equipos.</p>
             <p>Conoce casos reales, herramientas y decisiones que inspiran.</p>
           </div>
         </div>
       </div>
-    </div>
-    <!--Tabla-->
-    <div class="table-responsive tabla-estilo">
-      <table class="table align-middle">
+    </section>
+
+    <!-- Tabla -->
+    <section class="tabla-estilo">
+      <table>
         <thead>
           <tr>
             <th>🛠️ Worklife</th>
@@ -103,7 +101,7 @@
           </tr>
         </thead>
         <tbody>
-          <tr class="align-top">
+          <tr>
             <td>
               <h3>Técnicas, herramientas y experiencia en terreno</h3>
               <p>Accede a contenido práctico sobre poda, escalada, normativas y equipos. Aquí se comparten aprendizajes
@@ -125,99 +123,73 @@
           </tr>
         </tbody>
       </table>
-    </div>
-    <!-- Card horizontal img+texto+boton -->
-    <div class="card card-horizontal">
-      <img src="./assets/vista-aerea-evento.png" class="card-img-top"
-        alt="vista aerea de un grupo de arboristas reunidos compartiendo en un parque con mucha naturaleza">
+    </section>
+
+    <!-- Card horizontal img+texto+botón -->
+    <section class="card-horizontal">
+      <img src="./assets/vista-aerea-evento.png" alt="vista aerea de un grupo de arboristas reunidos compartiendo en un parque con mucha naturaleza">
       <div class="card-body">
         <h3 class="card-title">Ya somos cientos y seguimos creciendo!</h3>
         <p class="card-text">✨ Únete a una comunidad que no solo sube a los árboles, sino que también eleva el
           conocimiento, la ética y el propósito de esta profesión ✨</p>
         <p class="card-text">🌳 Aquí cultivamos saberes, compartimos experiencias y crecemos juntos 🌳</p>
-        <button class="btn btn-primary boton-primario" type="button">Quiero ser parte</button>
+        <button class="boton-primario" type="button">Quiero ser parte</button>
       </div>
-    </div>
+    </section>
   </main>
-  <footer class="py-5 estilo-footer-jesu">
+
+  <footer class="estilo-footer-jesu">
     <div class="container">
       <div class="row">
-        <!--Logo-->
-        <div class="col-6 col-md-2 mb-3">
+        <!-- Logo -->
+        <div class="col-6 col-md-2">
           <img class="logo-footer" src="./assets/Logo-Tree-Tale.png" alt="Logo-TreeTale">
         </div>
-        <!--Links-->
-        <div class="col-6 col-md-2 mb-3">
+
+        <!-- Links -->
+        <div class="col-6 col-md-2">
           <h4>Secciones</h4>
           <ul class="nav flex-column">
-            <li class="nav-item mb-2">
-              <a href="#" class="nav-link p-0 text-body-secondary">Home</a>
-            </li>
-            <li class="nav-item mb-2">
-              <a href="./pages/worklife.html" class="nav-link p-0 text-body-secondary">Worklife</a>
-            </li>
-            <li class="nav-item mb-2">
-              <a href="./pages/treeWisdom.html" class="nav-link p-0 text-body-secondary">Tree Wisdom</a>
-            </li>
-            <li class="nav-item mb-2">
-              <a href="./pages/environment.html" class="nav-link p-0 text-body-secondary">Environment</a>
-            </li>
-            <li class="nav-item mb-2">
-              <a href="./pages/managment.html" class="nav-link p-0 text-body-secondary">Managment</a>
-            </li>
-            <li class="nav-item mb-2">
-              <a href="./pages/managment.html" class="nav-link p-0 text-body-secondary">Contacto</a>
-            </li>
+            <li class="nav-item"><a href="#" class="nav-link p-0">Home</a></li>
+            <li class="nav-item"><a href="./pages/worklife.html" class="nav-link p-0">Worklife</a></li>
+            <li class="nav-item"><a href="./pages/treeWisdom.html" class="nav-link p-0">Tree Wisdom</a></li>
+            <li class="nav-item"><a href="./pages/environment.html" class="nav-link p-0">Environment</a></li>
+            <li class="nav-item"><a href="./pages/managment.html" class="nav-link p-0">Managment</a></li>
+            <li class="nav-item"><a href="./pages/managment.html" class="nav-link p-0">Contacto</a></li>
           </ul>
         </div>
-        <!--Newsletter-->
-        <div class="col-md-5 offset-md-1 mb-3 newsletter">
+
+        <!-- Newsletter -->
+        <div class="col-md-5 offset-md-1 newsletter">
           <form>
             <h4>Suscríbete a nuestra Newsletter</h4>
             <p>Y recibe contenido nuevo cada semana 🌿</p>
-            <div class="d-flex flex-column flex-sm-row w-100 gap-2"> <label for="newsletter1" class="visually-hidden">tu
-                correo</label> 
-                <input id="newsletter1" type="email" class="form-control" placeholder="Correo electrónico">
-              <button class="btn boton-secundario" type="button">Suscribirme</button>
+            <div class="newsletter-row">
+              <label for="newsletter1" class="visually-hidden">tu correo</label>
+              <input id="newsletter1" type="email" class="form-control newsletter-input" placeholder="Correo electrónico">
+              <button class="boton-secundario" type="button">Suscribirme</button>
             </div>
           </form>
         </div>
       </div>
-      <!--Parte de abajo-->
-      <div class="container d-flex flex-column flex-sm-row justify-content-between py-4 my-4 border-top">
+
+      <!-- Parte de abajo -->
+      <div class="footer-bottom">
         <p>© 2025 TreeTale. Todos los derechos reservados.</p>
-        <ul class="list-unstyled d-flex">
-          <li class="ms-3">
-            <a class="link-body-emphasis" href="./assets/instagram-logo.png" aria-label="Instagram">
-              <img src="./assets/instagram-logo.png" alt="Instagram-logo">
-            </a>
-          </li>
-          <li class="ms-3">
-            <a class="link-body-emphasis" href="#" aria-label="Youtube">
-              <img src="./assets/youtube-logo.png" alt="youtube-logo">
-            </a>
-          </li>
-          <li class="ms-3">
-            <a class="link-body-emphasis" href="#" aria-label="Linkedin">
-              <img src="./assets/linkedin-logo.png" alt="linkedin-logo">
-            </a>
-          </li>
+        <ul class="social">
+          <li><a href="./assets/instagram-logo.png" aria-label="Instagram"><img src="./assets/instagram-logo.png" alt="Instagram-logo"></a></li>
+          <li><a href="#" aria-label="Youtube"><img src="./assets/youtube-logo.png" alt="youtube-logo"></a></li>
+          <li><a href="#" aria-label="Linkedin"><img src="./assets/linkedin-logo.png" alt="linkedin-logo"></a></li>
         </ul>
       </div>
     </div>
   </footer>
 
-  </div>
-
-  <!--Bootstrap JS-->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
-    crossorigin="anonymous"></script>
-  <!--AOS-->
+  <!-- Bootstrap JS -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
+  <!-- AOS -->
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-  <script>
-    AOS.init();
-  </script>
+  <script> AOS.init(); </script>
 </body>
-
 </html>
+
