--- a/pages/managment.html
+++ b/pages/managment.html
@@ -19,27 +19,30 @@
 <body>
   <header>
     <nav class="navbar navbar-expand-lg bg-estilo-jesu">
-      <div class="container-fluid">
+      <div class="container">
         <a class="navbar-brand" href="#">
-          <img class="logo-navbar" src="../assets/Logo-Tree-Tale.png" alt="Logo-TreeTale" />
+          <img class="logo-navbar" src="../assets/Logo-Tree-Tale.png" alt="Logo-TreeTale">
         </a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                aria-expanded="false" aria-label="Toggle navigation">
+
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Abrir navegación">
           <span class="navbar-toggler-icon"></span>
         </button>
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav me-auto">
-            <li class="nav-item"><a class="nav-link" href="../index.html">Home</a></li>
+          <!-- Menú principal -->
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" aria-current="page" href="../index.html">Home</a>
+            </li>
             <li class="nav-item"><a class="nav-link" href="./worklife.html">Worklife</a></li>
             <li class="nav-item"><a class="nav-link" href="./treeWisdom.html">Tree Wisdom</a></li>
-            <li class="nav-item"><a class="nav-link active" aria-current="page" href="#">Managment</a></li>
+            <li class="nav-item"><a class="nav-link" href="#">Managment</a></li>
             <li class="nav-item"><a class="nav-link" href="./environment.html">Environment</a></li>
           </ul>
 
           <!-- Buscador -->
-          <form class="buscador-form" role="search">
+          <form class="nav-search" role="search">
             <input class="buscador" type="search" placeholder="Search" aria-label="Search" />
             <button class="boton-secundario" type="submit">Search</button>
           </form>
@@ -141,7 +144,7 @@
               </div>
             </div>
           </div>
-        </div><
+        </div>
       </div>
     </section>
 
@@ -294,22 +297,23 @@
 
   <!-- Footer -->
   <footer class="estilo-footer-jesu">
-    <div class="seccion-contenedor">
+    <div class="container">
       <div class="row">
         <!-- Logo -->
         <div class="col-6 col-md-2">
-          <img class="logo-footer" src="../assets/Logo-Tree-Tale.png" alt="Logo-TreeTale" />
+          <img class="logo-footer" src="../assets/Logo-Tree-Tale.png" alt="Logo-TreeTale">
         </div>
 
         <!-- Links -->
         <div class="col-6 col-md-2">
           <h4>Secciones</h4>
           <ul class="nav flex-column">
-            <li class="nav-item"><a href="../index.html" class="nav-link">Home</a></li>
-            <li class="nav-item"><a href="./worklife.html" class="nav-link">Worklife</a></li>
-            <li class="nav-item"><a href="./treeWisdom.html" class="nav-link">Tree Wisdom</a></li>
-            <li class="nav-item"><a href="./environment.html" class="nav-link">Environment</a></li>
-            <li class="nav-item"><a href="#" class="nav-link">Managment</a></li>
+            <li class="nav-item"><a href="../index.html" class="nav-link p-0">Home</a></li>
+            <li class="nav-item"><a href="./worklife.html" class="nav-link p-0">Worklife</a></li>
+            <li class="nav-item"><a href="./treeWisdom.html" class="nav-link p-0">Tree Wisdom</a></li>
+            <li class="nav-item"><a href="./environment.html" class="nav-link p-0">Environment</a></li>
+            <li class="nav-item"><a href="#" class="nav-link p-0">Managment</a></li>
+            <li class="nav-item"><a href="./managment.html" class="nav-link p-0">Contacto</a></li>
           </ul>
         </div>
 
@@ -317,10 +321,10 @@
         <div class="col-md-5 offset-md-1 newsletter">
           <form>
             <h4>Suscríbete a nuestra Newsletter</h4>
-            <p>Y recibe contenido nuevo cada semana.</p>
-            <div class="newsletter-form">
+            <p>Y recibe contenido nuevo cada semana 🌿</p>
+            <div class="newsletter-row">
               <label for="newsletter1" class="visually-hidden">tu correo</label>
-              <input id="newsletter1" type="email" class="form-control" placeholder="Email address" />
+              <input id="newsletter1" type="email" class="form-control newsletter-input" placeholder="Correo electrónico">
               <button class="boton-secundario" type="button">Suscribirme</button>
             </div>
           </form>
@@ -330,10 +334,10 @@
       <!-- Parte de abajo -->
       <div class="footer-bottom">
         <p>© 2025 TreeTale. Todos los derechos reservados.</p>
-        <ul class="social-list">
-          <li><a class="link-body-emphasis" href="#" aria-label="Instagram"><img src="../assets/instagram-logo.png" alt="Instagram-logo" /></a></li>
-          <li><a class="link-body-emphasis" href="#" aria-label="Youtube"><img src="../assets/youtube-logo.png" alt="youtube-logo" /></a></li>
-          <li><a class="link-body-emphasis" href="#" aria-label="Linkedin"><img src="../assets/linkedin-logo.png" alt="linkedin-logo" /></a></li>
+        <ul class="social">
+          <li><a href="./assets/instagram-logo.png" aria-label="Instagram"><img src="../assets/instagram-logo.png" alt="Instagram-logo"></a></li>
+          <li><a href="#" aria-label="Youtube"><img src="../assets/youtube-logo.png" alt="youtube-logo"></a></li>
+          <li><a href="#" aria-label="Linkedin"><img src="../assets/linkedin-logo.png" alt="linkedin-logo"></a></li>
         </ul>
       </div>
     </div>
